--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "file": "^0.2.2",
     "form-data": "^3.0.0",
     "imagebuffer": "^3.0.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "node-fetch": "^2.6.1",
+    "path": "^0.12.7",
     "request": "^2.88.2",
     "router": "^1.3.5"
   }
